adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas consequuntur mollitia, cumque iusto ratione dignissimos vel omnis similique animi. At asperiores praesentium ratione rem recusandae vero quod distinctio, illo esse.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A ea sed exercitationem necessitatibus praesentium magnam hic, saepe minima soluta consequuntur, est quos nemo, eligendi fuga neque itaque dolorum tenetur. Animi!</p>
 </body>
 </html>
